objects/End_Point_Urls__mdt.object
<CustomObject>
    <fields>
        <fullName>Content_Type__c</fullName>
        <description>Authentication Details</description>
        <label>Content_Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Point_Url__c</fullName>
        <description>End Point URL which can be MS URL as well</description>
        <label>End_Point_Url</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <description>Environment Label (Optional)</description>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UAT</fullName>
                    <default>true</default>
                    <label>UAT</label>
                </value>
                <value>
                    <fullName>PROD</fullName>
                </value>
                <value>
                    <fullName>SIT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Procedure_Name__c</fullName>
        <description>VIP that needs to be invoked</description>
        <label>Integration_Procedure_Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MethodName__c</fullName>
        <description>Used as input to query MDT</description>
        <label>MethodName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <description>Optional field that can be used as input</description>
        <label>Order_Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X_Correlation_Id__c</fullName>
        <label>X_Correlation_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>client_id__c</fullName>
        <description>Authentication Details</description>
        <label>client_id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>client_secret__c</fullName>
        <description>Authentication Details</description>
        <label>client_secret</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>End_Point_Urls</label>
    <pluralLabel>End_Point_Urls</pluralLabel>
</CustomObject>